게시글 작성 버튼 요청, 게시글 목록 추가

--- a/src/main/webapp/board/boardDetailForm.html
+++ b/src/main/webapp/board/boardDetailForm.html
@@ -109,8 +109,8 @@ table td[colspan="2"] {
          </tr>
          <tr>
             <td colspan="2" align="center">
-               <input type="submit" id="writeBtn" value="글쓰기" />
-               <input type="reset" value="다시작성" />
+               <input type="button" id="writeBtn" value="수정" />
+               <input type="button" id="deleteBtn" value="삭제" />
             </td>
          </tr>
       </table>
