검색 버튼 추가, 상세 페이지 HTML 요청 추가

--- a/src/main/webapp/board/boardDetailForm.html
+++ b/src/main/webapp/board/boardDetailForm.html
@@ -94,14 +94,14 @@ table td[colspan="2"] {
    <form id="boardWriteForm" method="post">
       <table border="1">   
          <tr>
-            <th>제목</th>
+            <th>boardDetailForm페이지</th>
             <td>
                <input type="text" name="subject" id="subject" size="65" placeholder="제목 입력"/>
                <div id="subjectDiv"></div>
             </td>
          </tr>
          <tr>
-            <th>내용</th>
+            <th>boardDetailForm페이지</th>
             <td>
                <textarea name="content" id="content" cols="65" rows="15" placeholder="내용을 입력하세요"></textarea>
                <div id="contentDiv"></div>
