페이징 진행 중 ...

--- a/src/main/webapp/board/boardListForm.html
+++ b/src/main/webapp/board/boardListForm.html
@@ -229,7 +229,7 @@ $(function () {
         url: '/memberMVC/boards/pagehtml?pg='+pg,
         dataType: 'text/html',
         success: function(data, textStatus, jqXHR) {
-           console.log(data);
+           $('pageBlcok').html(data);
         },
         error: function(e){
             console.log(e);
