--- a/src/main/webapp/board/boardDetailForm.html
+++ b/src/main/webapp/board/boardDetailForm.html
@@ -208,9 +208,8 @@ $(function () {
 		$.ajax({
 	        type: 'DELETE',
 	        url: '/memberMVC/boards/delete?no='+no,
-	        dataType: 'json',
 	        success: function(data, textStatus, jqXHR) {
-	           console.log(data);
+	           console.log(jqXHR.status);
 	           if(jqXHR.status === 200){ // 200 OK로 게시글 목록이 존재
 	                alert('게시글이 삭제되었습니다.');
 					window.location.href = "/memberMVC/boards/listForm";
