페이징 링크 함수 수정

--- a/src/main/webapp/board/boardListForm.html
+++ b/src/main/webapp/board/boardListForm.html
@@ -127,7 +127,7 @@ span:hover {
 <script type="text/javascript">
 	
 function boardPaging(pg){
-	location.href = "boardList2.jsp?pg=" + pg;
+	location.href = "/memberMVC/boards/listForm?pg=" + pg;
 }	
 	
 $(function () {
