수정 오류 수정

--- a/src/main/webapp/board/boardUpdatelForm.html
+++ b/src/main/webapp/board/boardUpdatelForm.html
@@ -131,9 +131,8 @@ table td[colspan="2"] {
          </tr>
       </table>
 
-
 <script type="text/javascript" src="http://code.jquery.com/jquery-3.7.1.min.js"></script>
-<script src="../js/board.js"></script>
+<!--<script src="../js/board.js"></script>-->
 <script>
 	
 $(function () {
@@ -189,16 +188,17 @@ $(function () {
 	        }
    		});//데이터 불러오기 ajax 끝
 
-   	let boardData =
-	{
-			subject: $('#subject').val().trim(),
-			content: $('#content').val().trim(),
-	 };
+
 	
    	 $('#updateCompleteBtn').on('click', function(event) {
-
+	   	let boardData =
+		{
+				subject: $('#subject').val().trim(),
+				content: $('#content').val().trim(),
+		 };
+		 console.log(boardData);
 		$.ajax({
-	        type: 'PUT',
+	        type: 'post',
 	        url: '/memberMVC/boards/update?no='+no,
 	        data: boardData, 	
 	        success: function(data, textStatus, jqXHR) {
@@ -215,6 +215,9 @@ $(function () {
 				}
 				else if (xhr.status === 404) {	// Not Found 
 					alert('게시글이 존재하지 않습니다.');
+				}
+				else if (xhr.status === 400) {	// Bad Request
+					alert('잘못된 요청입니다.');
 				}
 	        }
    		});//ajax 끝
