--- a/src/main/webapp/board/boardDetailForm.html
+++ b/src/main/webapp/board/boardDetailForm.html
@@ -125,7 +125,7 @@ table td[colspan="2"] {
          </tr>
          <tr>
             <td colspan="2" align="center">
-			   <input type="button" id="backBtn" value="뒤로 가기" onclick="window.history.back();" />
+			   <input type="button" id="backBtn" value="뒤로 가기" onclick="window.location.href='/memberMVC//boards/listForm'" />
                <input type="button" id="updateBtn" style = "display: none;" value="수정" onclick="moveToUpdateForm()"/>
                <input type="button" id="deleteBtn" style = "display: none;" value="삭제" />
             </td>
@@ -222,6 +222,9 @@ $(function () {
 				}
 				else if (xhr.status === 404) {	// Not Found 
 					alert('게시글이 존재하지 않습니다.');
+				}
+				else if (xhr.status === 400) {	// Bad Request
+					alert('잘못된 요청입니다.');
 				}
 	        }
    		});//ajax 끝
